6755277: All initial changes to jdk7 to create openjdk 6 build 0 Summary: Final b00 state (as defined by the source bundle) Reviewed-by: darcy